<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/article_subtitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basic_01_03_text_scrollingView.ScrollingTextActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1.0"
        android:background="@color/colorPrimary"
        android:padding="@dimen/text_padding_ten"
        android:text="@string/article_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/article_heading">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/colorPrimary"
                android:padding="@dimen/text_padding_ten"
                android:text="@string/article_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/text_line_spacing"
                android:padding="@dimen/text_padding_ten"
                android:text="@string/article" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>